[package]
name = "synen-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Lexer
logos = "0.7"

# Parser
chumsky = "0.8"

# AST
serde = { version = "1.0", features = ["derive"] }

# Semantic
thiserror = "2.0"

# AI Lowering
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"

# LLVM Backend
inkwell = { version = "0.4", features = ["llvm15-0"] }

# CLI
clap = { version = "4.0", features = ["derive"] }